runFormatTest(import.meta, ["angular"], { embeddedLanguageFormatting: "off" });
